# ChangeLog for dev-util/netbeans
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Apr 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha8.ebuild, +files/5.5-r2,
  +files/5.5-r2/jdbcstorage-build.xml-comments.patch,
  +files/5.5-r2/mdrant-build.xml-comments.patch,
  +files/5.5-r2/startscript.sh, +netbeans-5.5-r5.ebuild:
  Changed from fetch restricted wsdp packages to those from wsdp-overlay +
  netbeans-5.5 changed from javahelp-bin to javahelp. Not tested yet as I have
  problem with download of jsr101 from sun's website as the login page doesn't
  seem to work.

  30 Mar 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha8.ebuild:
  Reverted to bundled jars to make things compile

  30 Mar 2007; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-6.0_alpha8.ebuild:
  Version bump, not working yet

  16 Mar 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha7.ebuild:
  Added dep on proguard + corrected js173 link path

  04 Mar 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha7.ebuild:
  Changed dependency from javahelp-bin to javahelp

  25 Feb 2007; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-6.0_alpha7.ebuild, -netbeans-6.0_alpha20061023.ebuild,
  -netbeans-6.0_alpha20061109.ebuild,
  -files/6.0/netbeans-6.0_alpha20061023-gentoo.patch,
  files/6.0/startscript.sh, -files/emptyunscramble.xsl:
  Milestone 7 ebuild

  21 Jan 2007; Miroslav Šulc <fordfrog@gentoo.org> -files/5.5-r2,
  -netbeans-5.5-r2.ebuild,
  -files/5.5-r2/jdbcstorage-build.xml-comments.patch,
  -files/5.5-r2/mdrant-build.xml-comments.patch,
  -files/5.5-r2/startscript.sh:
  netbeans-5.5-r2 moved to tree

  20 Jan 2007; Miroslav Šulc <fordfrog@gentoo.org> +files/5.5-r2,
  +netbeans-5.5-r2.ebuild,
  +files/5.5-r2/jdbcstorage-build.xml-comments.patch,
  +files/5.5-r2/mdrant-build.xml-comments.patch,
  +files/5.5-r2/startscript.sh:
  Updated netbeans-5.5 ebuild, cannot go into tree atm because of unsatisfied