@@ -21,6 +21,8 @@ LICENSE="CDDL"
 KEYWORDS="~amd64 ~x86 ~x86-fbsd"
 IUSE="debug doc mobility visualweb"
 
+# TODO: solve how to link jaxb-xjc
+
 COMMON_DEPEND="
 	>=dev-java/ant-1.6.3
 	dev-java/antlr
@@ -58,9 +60,11 @@ RDEPEND=">=virtual/jre-1.5
 	dev-java/fastinfoset
 	dev-java/jakarta-oro
 	dev-java/jax-rpc
-	dev-java/jaxb
+	>=dev-java/jaxb-2
 	dev-java/jaxp
 	mobility? ( >=dev-java/jdom-1.0 )
+	dev-java/jsr67
+	dev-java/jsr101
 	dev-java/jsr173
 	dev-java/jsr181
 	dev-java/jsr250
@@ -630,13 +634,13 @@ function symlink_extjars() {
 	java-pkg_jar-from fastinfoset fastinfoset.jar FastInfoset.jar
 	java-pkg_jar-from jaxp
 	# MISSING: jax-qname.jar (no ebuild)
-	java-pkg_jar-from jax-rpc jaxrpc-api.jar
+	java-pkg_jar-from jsr101
 	java-pkg_jar-from jax-rpc jaxrpc-impl.jar
 	java-pkg_jar-from jax-rpc jaxrpc-spi.jar
 	java-pkg_jar-from jsr173 jsr173.jar jsr173_api.jar
 	java-pkg_jar-from sun-javamail
 	java-pkg_jar-from relaxng-datatype
-	java-pkg_jar-from saaj saaj-api.jar
+	java-pkg_jar-from jsr67 jsr67.jar saaj-api.jar
 	java-pkg_jar-from saaj saaj-impl.jar
 	java-pkg_jar-from xsdlib
 
@@ -644,14 +648,14 @@ function symlink_extjars() {
 	java-pkg_jar-from sun-jaf
 	java-pkg_jar-from fastinfoset fastinfoset.jar FastInfoset.jar
 	# MISSING: http.jar (no ebuild)
-	java-pkg_jar-from jaxb jaxb-impl.jar
-	java-pkg_jar-from jaxb jaxb-xjc.jar
+	java-pkg_jar-from jaxb-2 jaxb-impl.jar
+	#java-pkg_jar-from jaxb-2 jaxb-xjc.jar
 	java-pkg_jar-from sun-jaxws-bin jaxws-rt.jar
 	java-pkg_jar-from sun-jaxws-bin jaxws-tools.jar
 	java-pkg_jar-from jsr173 jsr173.jar jsr173_api.jar
 	java-pkg_jar-from jsr250
 	#resolver.jar (netbeans stuff)
-	java-pkg_jar-from saaj saaj-impl.jar
+	java-pkg_jar-from saaj saaj.jar saaj-impl.jar
 	java-pkg_jar-from sjsxp
 	# MISSING: stax-ex.jar
 	# MISSING: streambuffer.jar
@@ -660,7 +664,7 @@ function symlink_extjars() {
 	java-pkg_jar-from jaxb jaxb-api.jar
 	java-pkg_jar-from sun-jaxws-bin jaxws-api.jar
 	java-pkg_jar-from jsr181 jsr181.jar jsr181-api.jar
-	java-pkg_jar-from saaj saaj-api.jar
+	java-pkg_jar-from jsr67 jsr67.jar saaj-api.jar
 
 	#ide8/modules/org-apache-tools-ant-module.jar
 	#ide8/modules/org-apache-xml-resolver.jar
